<resources>
    <string name="app_name">LearnApp</string>
    <string name="action_profil">My Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label" translatable="true">Second Fragment</string>
    <string name="next" translatable="true">Login now</string>
    <string name="previous" translatable="true">Previous</string>
    <string name="hint_email_address" translatable="true">Your Email</string>
    <string name="hint_password" translatable="true">Your Password</string>
    <string name="password_recovery" translatable="true">Password forgotten?</string>

    <string name="hello_first_fragment">Login</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="learn_app" translatable="true">Learn App</string>
    <string name="register" translatable="true">Register</string>
    <!-- Strings used for register for navigation -->
    <string name="btn_register" translatable="true">Register now</string>
    <string name="title_register" translatable="true">Register</string>
    <string name="hint_username" translatable="true">Username</string>
    <string name="hint_firstname" translatable="true">First Name</string>
    <string name="hint_lastname" translatable="true">Last Name</string>
    <string name="hint_repeat_password" translatable="true">Repeat Password</string>
    <string name="todo">TODO</string>
    <string name="to_do">TODO</string>
    <string name="gdc">gdc</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_known">Known</string>
    <string name="quiz_maybe_known">So close</string>
    <string name="quiz_dont_know">Don\'t know</string>
    <string name="quiz_show_answer">Show answer</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="quit">Quit</string>
    <string name="main_menu">Main Menu</string>
    <!-- Strings used for recovery for navigation -->
    <string name="button_code">Send code to Email</string>
    <string name="edit_code">Enter Code</string>
    <string name="button_submit_code">Submit</string>
    <string name="edit_new_password">New Password</string>
    <string name="edit_repeat_new_password">Repeat New Password</string>
    <!-- Profil -->
    <string name="btn_save" translatable="true">Save</string>
    <string name="profile">Profile</string>
    <string name="profile_default" />
    <string name="profile_username">Username:</string>
    <string name="profile_firstname">First Name:</string>
    <string name="profile_lastname">Last Name:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_btn">Upload Image</string>
    <string name="delete">Delete</string>
    <string name="hint_unit_value">Unit Value</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logged out successfully</string>
    <string name="loading">Loading...</string>
</resources>
