<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.RecoverForm">

    <Button
        android:id="@+id/recover_button_sendcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_code"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_edit_email" />

    <EditText
        android:id="@+id/recover_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:tooltipText="Example: example@mail.com"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recover_edit_newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:tooltipText="A-z,Number,Special Char"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_edit_email" />

    <EditText
        android:id="@+id/recover_edit_repeatpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="360dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_repeat_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_edit_newpassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/recover_edit_code"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/edit_code"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recover_button_codecheck"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:text="@string/button_submit_code"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/recover_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/recover_edit_repeatpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>